--- a/.github/workflows/sync-data.yml
+++ b/.github/workflows/sync-data.yml
@@ -2,7 +2,7 @@ name: Sync Excel Data to Supabase
 
 on:
   schedule:
-    - cron: '0 */2 * * *'  # Every 2 hours
+    - cron: '30 */2 * * *'  # Every 2 hours at :30 (30 min after Power Automate)
   workflow_dispatch:  # Manual trigger
 
 jobs:
@@ -16,7 +16,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'  # Changed to Node 20
         
     - name: Download and process Excel file
       env:
@@ -24,5 +24,5 @@ jobs:
         SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         EXCEL_FILE_URL: ${{ secrets.EXCEL_FILE_URL }}
       run: |
-        npm install xlsx node-fetch
+        npm install xlsx  # Removed node-fetch, use built-in fetch
         node process-excel.js
